--- a/trafegoespacial/src/main/webapp/WEB-INF/web.xml
+++ b/trafegoespacial/src/main/webapp/WEB-INF/web.xml
@@ -17,4 +17,13 @@
 	<welcome-file-list>
 		<welcome-file>manterPlanoVoo.xhtml</welcome-file>
 	</welcome-file-list>
+	
+	  <listener>
+        <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+    </listener>
+
+    <resource-env-ref>
+        <resource-env-ref-name>BeanManager</resource-env-ref-name>
+        <resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
+    </resource-env-ref>
 </web-app>
